# npatlas_curator

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.old  Makefile  README.md  config.py  curator.ini  dataset_schema.json  dev-requirements.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  flask.env  flask_env.sh  pyproject.toml  requirements.txt  run.py
Docker/: Dockerfile  Dockerfile.celery  Dockerfile.dev
app/: __init__.py  config.py  models.py
app/admin/: forms.py  npatlas_training_set_v2.json  schemas.py  views.py
app/auth/: forms.py  views.py
app/checker/: Checker.py  Inserter.py  NameString.py  ResolveEnum.py  __init__.py  forms.py  schemas.py  validators.py  views.py
app/cli/: __init__.py  dataset.py
app/data/: __init__.py  forms.py  validators.py  views.py
app/home/: __init__.py  views.py
app/static/css/: style.css
app/static/js/: article.js  checker.js  problems.js  resolve.js
app/templates/: base.html
app/templates/admin/: add_dataset.html  datasets.html  delete_dataset.html  edit_dataset.html  reset_dataset.html
app/utils/: ChemCompound.py  Compound.py  NoneDict.py  atlas_api.py  oauth_session.py  pubchem_search.py  pubchem_smiles_standardizer.py  slack_notifier.py  sql_models.py  timeout.py
migrations/versions/: 23edd7f553cf_add_dataset_error_column.py  75af48d8a6d8_api_migration.py
my-nginx/: Dockerfile  app.conf
my-nginx-container/: app.conf
tests/: test_utils.py  test_utils_compound.py
tests/func/: test_util_atlas_api.py
tests/unit/: test_NameString.py  test_util_atlas_api.py
(+8 files in other folders)
