[tool.poetry]
name = "npatlas_curator"
version = "3.3.10"
description = "NP Atlas Online Curation Tool"
authors = ["jvansan <jeffreyavansanten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rdkit-pypi = "^2022.3.2"
alembic = ">=1.0.0"
asn1crypto = ">=0.24.0"
cffi = ">=1.11.5"
click = ">=6.7"
cryptography = ">=2.3.1"
dominate = ">=2.3.1"
Flask = ">=1.0.2"
Flask-Bootstrap = ">=3.3.7.1"
Flask-Login = ">=0.4.1"
Flask-Migrate = ">=2.2.1"
Flask-SQLAlchemy = ">=2.3.2"
Flask-Testing = ">=0.7.1"
Flask-WTF = ">=0.14.2"
Flask-Caching = ">=1.9.0"
idna = ">=2.7"
itsdangerous = ">=0.24"
Jinja2 = ">=2.10.1"
Mako = ">=1.0.7"
MarkupSafe = ">=1.0"
pycparser = ">=2.18"
PyMySQL = ">=0.9.2"
python-dateutil = ">=2.7.3"
python-editor = ">=1.0.3"
six = ">=1.11.0"
SQLAlchemy = ">=1.3.0"
visitor = ">=0.1.3"
Werkzeug = ">=0.14.1"
WTForms = ">=2.2.1"
WTForms-SQLAlchemy = ">=0.1"
celery = "^5.2.6"
redis = "^4.2.2"
PubChemPy = "^1.0.4"
email-validator = "^1.2.1"
pydantic = "^1.9.0"
requests = "^2.27.1"
oauthlib = "^3.2.0"
requests-oauthlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.260"
python-dotenv = "^1.0.0"
coverage = "^7.2.2"

[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
